test(kitchenpos): 메뉴 테스트 작성