@@ -39,7 +39,7 @@ class ProductServiceTest {
 
     private static final UUID PRODUCT_ID = UUID.randomUUID();
     private static final String PRODUCT_NAME = "name";
-    private static final BigDecimal PRODUCT_PRICE = BigDecimal.valueOf(10);
+    private static final BigDecimal PRODUCT_PRICE = BigDecimal.TEN;
     private Product product;
     private MenuProduct menuProduct;
 
@@ -57,7 +57,7 @@ class ProductServiceTest {
 
     @Test
     @DisplayName("상품은 식별키, 이름, 가격을 가진다.")
-    void test1() {
+    void product() {
         assertAll(
                 () -> assertThat(product.getId()).isEqualTo(PRODUCT_ID),
                 () -> assertThat(product.getName()).isEqualTo(PRODUCT_NAME),
@@ -65,97 +65,81 @@ class ProductServiceTest {
         );
     }
 
-    @Test
-    @DisplayName("상품을 등록한다.")
-    void test2() {
-        // Given
-        when(productRepository.save(any())).thenReturn(product);
-
-        // When
-        Product result = productService.create(product);
-
-        // Then
-        assertThat(result).isEqualTo(product);
-    }
-
     @Nested
-    @DisplayName("상품의 가격은 비어있거나 0보다 작을 수 없다.")
-    class test3 {
+    @DisplayName("상품을 등록할 수 있다.")
+    class create {
         @Test
-        @DisplayName("가격은 비어있을 수 없다.")
-        void test1() {
+        @DisplayName("등록")
+        void create_1() {
             // Given
-            Product product = new Product();
+            when(productRepository.save(any())).thenReturn(product);
 
             // When
-            product.setId(PRODUCT_ID);
-            product.setName(PRODUCT_NAME);
-            product.setPrice(null);
+            Product result = productService.create(product);
 
             // Then
-            assertThatThrownBy(() -> productService.create(product))
-                    .isInstanceOf(IllegalArgumentException.class);
+            assertThat(result).isEqualTo(product);
         }
 
-        @Test
-        @DisplayName("가격은 0보다 작을 수 없다.")
-        void test2() {
-            // Given
-            Product product = new Product();
+        @Nested
+        @DisplayName("가격은 비어있거나 0보다 작으면 예외가 발생한다.")
+        class create_2 {
+            @Test
+            @DisplayName("비어있는 경우")
+            void create_2_1() {
+                // When
+                product.setPrice(null);
 
-            // When
-            product.setId(PRODUCT_ID);
-            product.setName(PRODUCT_NAME);
-            product.setPrice(BigDecimal.valueOf(-1));
+                // Then
+                assertThatThrownBy(() -> productService.create(product))
+                        .isInstanceOf(IllegalArgumentException.class);
+            }
 
-            // Then
-            assertThatThrownBy(() -> productService.create(product))
-                    .isInstanceOf(IllegalArgumentException.class);
-        }
-    }
+            @Test
+            @DisplayName("0보다 작은경우")
+            void create_2_2() {
+                // When
+                product.setPrice(BigDecimal.valueOf(-1));
 
-    @Nested
-    @DisplayName("상품의 이름은 없거나 비속어 이면 안된다.")
-    class test4 {
-        @Test
-        @DisplayName("이름은 비어있을 수 없다.")
-        void test1() {
-            // Given
-            Product product = new Product();
-
-            // When
-            product.setId(PRODUCT_ID);
-            product.setName(null);
-            product.setPrice(PRODUCT_PRICE);
-
-            // Then
-            assertThatThrownBy(() -> productService.create(product))
-                    .isInstanceOf(IllegalArgumentException.class);
+                // Then
+                assertThatThrownBy(() -> productService.create(product))
+                        .isInstanceOf(IllegalArgumentException.class);
+            }
         }
 
-        @Test
-        @DisplayName("이름은 비속어 일 수 없다.")
-        void test2() {
-            // Given
-            Product product = new Product();
+        @Nested
+        @DisplayName("이름은 없거나 비속어 이면 예외가 발생한다.")
+        class create_3 {
+            @Test
+            @DisplayName("비어있는 경우")
+            void create_3_1() {
+                // When
+                product.setName(null);
 
-            // When
-            when(purgomalumClient.containsProfanity("비속어")).thenReturn(true);
-            product.setId(PRODUCT_ID);
-            product.setPrice(PRODUCT_PRICE);
-            product.setName("비속어");
+                // Then
+                assertThatThrownBy(() -> productService.create(product))
+                        .isInstanceOf(IllegalArgumentException.class);
+            }
 
-            // Then
-            assertThatThrownBy(() -> productService.create(product))
-                    .isInstanceOf(IllegalArgumentException.class);
+            @Test
+            @DisplayName("비속어인 경우")
+            void create_3_2() {
+                // When
+                when(purgomalumClient.containsProfanity("비속어")).thenReturn(true);
+                product.setName("비속어");
+
+                // Then
+                assertThatThrownBy(() -> productService.create(product))
+                        .isInstanceOf(IllegalArgumentException.class);
+            }
         }
     }
 
     @Test
     @DisplayName("상품의 전체목록을 조회할 수 있다.")
-    void test5() {
+    void findAll() {
         // Given
-        List<Product> products = List.of(new Product(), new Product());
+        List<Product> products = List.of(product, product);
         when(productRepository.findAll()).thenReturn(products);
 
         // When
@@ -167,10 +151,10 @@ class ProductServiceTest {
 
     @Nested
     @DisplayName("상품의 가격을 변경할 수 있다.")
-    class test6 {
+    class changePrice {
         @Test
-        @DisplayName("상품 가격 변경이 성공적으로 이루어진 경우")
-        void test1() {
+        @DisplayName("변경")
+        void changePrice_1() {
             // Given
             when(productRepository.findById(eq(PRODUCT_ID))).thenReturn(Optional.of(product));
 
@@ -181,41 +165,35 @@ class ProductServiceTest {
             assertThat(changedProduct.getPrice()).isEqualTo(BigDecimal.valueOf(10));
         }
 
-        @Test
-        @DisplayName("가격은 비어있을 수 없다.")
-        void test2() {
-            // Given
-            Product product = new Product();
+        @Nested
+        @DisplayName("가격은 비어있거나 0보다 작으면 예외가 발생한다.")
+        class changePrice_2 {
+            @Test
+            @DisplayName("비어있는 경우")
+            void changePrice_2_1() {
+                // When
+                product.setPrice(null);
 
-            // When
-            product.setId(PRODUCT_ID);
-            product.setName(PRODUCT_NAME);
-            product.setPrice(null);
+                // Then
+                assertThatThrownBy(() -> productService.changePrice(PRODUCT_ID, product))
+                        .isInstanceOf(IllegalArgumentException.class);
+            }
 
-            // Then
-            assertThatThrownBy(() -> productService.changePrice(PRODUCT_ID, product))
-                    .isInstanceOf(IllegalArgumentException.class);
+            @Test
+            @DisplayName("0보다 작은경우")
+            void changePrice_2_2() {
+                // When
+                product.setPrice(BigDecimal.valueOf(-1));
+
+                // Then
+                assertThatThrownBy(() -> productService.changePrice(PRODUCT_ID, product))
+                        .isInstanceOf(IllegalArgumentException.class);
+            }
         }
 
         @Test
-        @DisplayName("가격은 0보다 작을 수 없다.")
-        void test3() {
-            // Given
-            Product product = new Product();
-
-            // When
-            product.setId(PRODUCT_ID);
-            product.setName(PRODUCT_NAME);
-            product.setPrice(BigDecimal.valueOf(-1));
-
-            // Then
-            assertThatThrownBy(() -> productService.changePrice(PRODUCT_ID, product))
-                    .isInstanceOf(IllegalArgumentException.class);
-        }
-
-        @Test
-        @DisplayName("존재하는 상품이어야 한다.")
-        void test4() {
+        @DisplayName("미리 존재하는 상품이 아니면 예외가 발생한다.")
+        void changePrice_3() {
             when(productRepository.findById(eq(PRODUCT_ID))).thenReturn(Optional.empty());
 
             assertThatThrownBy(() -> productService.changePrice(PRODUCT_ID, product))
@@ -224,18 +202,18 @@ class ProductServiceTest {
 
         @Nested
         @DisplayName("가격이 바뀐 후 메뉴의 가격이 메뉴에 속한 상품들의 수량 * 가격 보다 크면 노출하지 않는다.")
-        class test5 {
+        class changePrice_4 {
             @Test
             @DisplayName("노출하지 않는 경우")
-            void test1() {
+            void changePrice_4_1() {
                 // Given
                 Menu menu = new Menu();
-                menu.setPrice(BigDecimal.valueOf(300));
+                menu.setPrice(BigDecimal.valueOf(11));
                 menu.setDisplayed(true);
-                menu.setMenuProducts(Collections.singletonList(menuProduct));
+                menu.setMenuProducts(List.of((menuProduct)));
 
                 when(productRepository.findById(eq(PRODUCT_ID))).thenReturn(Optional.of(product));
-                when(menuRepository.findAllByProductId(eq(PRODUCT_ID))).thenReturn(Collections.singletonList(menu));
+                when(menuRepository.findAllByProductId(eq(PRODUCT_ID))).thenReturn(List.of(menu));
 
                 // When
                 productService.changePrice(PRODUCT_ID, product);
@@ -246,15 +224,15 @@ class ProductServiceTest {
 
             @Test
             @DisplayName("노출 하는 경우")
-            void test2() {
+            void changePrice_4_2() {
                 // Given
                 Menu menu = new Menu();
-                menu.setPrice(BigDecimal.valueOf(1));
+                menu.setPrice(BigDecimal.valueOf(9));
                 menu.setDisplayed(true);
-                menu.setMenuProducts(Collections.singletonList(menuProduct));
+                menu.setMenuProducts(List.of(menuProduct));
 
                 when(productRepository.findById(eq(PRODUCT_ID))).thenReturn(Optional.of(product));
-                when(menuRepository.findAllByProductId(eq(PRODUCT_ID))).thenReturn(Collections.singletonList(menu));
+                when(menuRepository.findAllByProductId(eq(PRODUCT_ID))).thenReturn(List.of(menu));
 
                 // When
                 productService.changePrice(PRODUCT_ID, product);
@@ -263,7 +241,6 @@ class ProductServiceTest {
                 assertThat(menu.isDisplayed()).isTrue();
             }
         }
-
     }
 
 }
